--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,12 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <title>智能导诊平台</title>
+    <meta http-equiv="x-ua-compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="renderer" content="webkit"/>
+    <meta name="keyword" content=""/>
+    <meta name="description" content=""/>
+
+
+    <!-- css start -->
+    <link rel="stylesheet" href="lib/bootstrap-3.3.4-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/main.css">
+    <!-- css end -->
+
+    <!-- js lib start -->
+    <!-- load angular, nganimate, and ui-router -->
+    <script src="lib/ui-bootstrap/jquery-1.11.3.min.js"></script>
+    <script src="lib/angular-1.3.15/angular.js"></script>
+    <script src="lib/angular-1.3.15/angular-animate.min.js"></script>
+    <script src="lib/angular-1.3.15/angular-resource.min.js"></script>
+    <script src="lib/angular-1.3.15/angular-ui/angular-ui-router.min.js"></script>
+    <script src="lib/bootstrap-3.3.4-dist/js/bootstrap.min.js"></script>
+    <script src="lib/ui-bootstrap/ui-bootstrap-tpls-0.13.0.min.js"></script>
+    <!-- js lib end -->
+
+    <!-- app config js start -->
+    <script src="js/app.js"></script>
+    <script src="js/common/services/localStorage.js"></script>
+    <script src="js/common/services/sessionStorage.js"></script>
+    <script src="js/common/services/QYBackend.js"></script>
+    <script src="js/common/services/commonService.js"></script>
+    <script src="js/common/directive/commonDirective.js"></script>
+    <script src="js/main/MainController.js"></script>
+    <!-- app config js end -->
+
+    <!--order end-->
 </head>
-<body>
+
+<body ng-app="QY">
 <div>
-    <a>aaa</a>
+    <div ui-view></div>
 </div>
 </body>
 </html>
