--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -29,7 +29,7 @@
     <!-- app config js start -->
     <script src="js/app.js"></script>
     <script src="js/main/MainController.js"></script>
-    <!--<script src="js/main/HomeController.js"></script>-->
+    <script src="js/main/MaintestController.js"></script>
     <!-- app config js end -->
 
     <!--order end-->
